[package]
name = "prompt-or-shock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.32.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tokio-util = "0.7.16"
